--- a/decks/data/data_file_2017.Rmd
+++ b/decks/data/data_file_2017.Rmd
@@ -5,7 +5,6 @@ output: html_document
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
-setwd("~/Desktop/factbook")
 ```
 
 # How to Obtain Data Frames From CIA Factbook
@@ -19,16 +18,29 @@ Your first option is using the rank order section of the factbook which has txt 
 - You may need to delete columns/clean the data to obtain the correct format.
  
 ```{r}
+library(tidyverse)
+
+# get country codes
+ctr_codes <- read.csv("country_codes.csv", header = TRUE)
+cia_codes <- ctr_codes[,1:2] 
+#iso_codes <- ctr_codes[,c(1,3)]
 
 setwd("~/Desktop/factbook/rankorder")
 
-pop_dta <- read_table("rawdata_2119.txt", col_names = c("X1", "country","X3", "X4", "pop"))
-pop_dta <- pop_dta[,-c(1,3,4)] # remove blank columns
-save(pop_dta, file="pop_data.RData")
+popDF <- read_table("rawdata_2119.txt", col_names = c("X1", "country","X3", "X4", "pop"))
+popDF <- popDF[,-c(1,3,4)] # remove blank columns
+popDF <- merge(cia_codes, popDF, by.x="Country", by.y = "country") 
+popDF <- popDF[,2:3]
+names(popDF) <- c("ctry", "pop")
+save(popDF, file="popDF.RData")
 
-IM_dta <- read_table("rawdata_2091.txt", col_names = c("X1", "country","X3", "X4", "infMort"))
-IM_dta <- IM_dta[,-c(1,3,4)]
-save(IM_dta, file="IM_data.RData")
+infMortDF <- read_table("rawdata_2091.txt", col_names = c("X1", "country","X3", "X4", "infMort"))
+infMortDF <- infMortDF[,-c(1,3,4)]
+infMortDF <- merge(cia_codes, infMortDF, by.x="Country", by.y = "country")
+infMortDF <- infMortDF[,2:3]
+names(infMortDF) <- c("ctry", "infMort")
+save(infMortDF, file="infMortDF.RData")
+
 ```
 ## Option 2: Field HTML Files
 Your second option is to use the field html files. These have the advantage of being more complete and more detailed information on each variable. However, they are also in a less user-friendly format.
