--- a/index.Rmd
+++ b/index.Rmd
@@ -13,7 +13,7 @@ markup: "mmark"
 ---
 
 
-### Lectures
+### Class Meetings
 
 <font color="#6CA0DC"><i class="fas fa-university fa-lg"></i></font> &nbsp; Perkins 071 
 
@@ -22,11 +22,16 @@ markup: "mmark"
 
 ### Teaching team and office hours 
 
+STA 440 contains a mixture of lecture, lab, and combination sessions at the usual class times. Sessions marked "lab" will be taught by TA's and involve hands-on analysis and/or consultation about case studies.
+
+Note: this schedule is approximate and is likely to be modified as the course progresses. Readiness assessments will be given without advance notice. Assignments are due at the beginning of class unless otherwise specified.
+
+
 | Team member | Office hours | Location |
 | ----------  | ----         | ---- |
 | [Professor Amy Herring](https://stat.duke.edu/people/amy-h-herring)  <a href="mailto:amy.herring@duke.edu" title="email"><i class="fa fa-envelope"></i></a> &nbsp;  | Wed and Thurs 1:30-2:30pm | 208 Old Chemistry |
-[TA Alex Mang](https://stat.duke.edu/people/alexander-mang-0)  <a href="mailto:alexander.mang@duke.edu" title="email"><i class="fa fa-envelope"></i></a> &nbsp; | Wed 6:00 - 8:00 pm ??? | 211A Old Chemistry
- [TA Lindsay Berry](https://lindsayberry.github.io)  <a href="mailto:lindsay.berry@duke.edu" title="email"><i class="fa fa-envelope"></i></a> &nbsp;  | Tue 1-2pm?? | 211A Old Chemistry
+[TA Jiurui Tang](https://stat.duke.edu/people/jiurui-tang)  <a href="mailto:jiurui.tang@duke.edu" title="email"><i class="fa fa-envelope"></i></a> &nbsp; | TBD | TBD
+ [TA Michael Akande](https://www2.stat.duke.edu/~oma9/)  <a href="mailto:olanrewaju.akande@duke.edu" title="email"><i class="fa fa-envelope"></i></a> &nbsp;  | TBD | TBD
  
                   
 
@@ -57,7 +62,7 @@ You should have access to a laptop and bring it to every class, fully charged. T
 | October 19    | CS4: Election Modeling Workshop | |
 | October 24    | CS4: Presentations: Who Votes in NC? | CS4 Interim Report: Who Votes in NC? |
 | October 26    | Individual CS: Web Scraping | | 
-| October 31    | Individual CS: Web Scraping | | CS4 Interim Report: Election Prediction Models |
+| October 31    | Individual CS: Web Scraping |  CS4 Interim Report: Election Prediction Models |
 | November 2    | Individual CS: Web Scraping Work in Groups | CS4 Final Report due by Midnight Nov 5|
 | November 7    | CS4: Presentations: Post Election Diagnostics | Individual CS Interim Report: Analysis Plan  |
 | November 9    | CS5: Missing Data: How to Survive | |
